--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "## Key Features - Basic Flask app scaffolding - TailwindCSS setup using npm (with purge implemented for Production)",
   "main": "",
   "scripts": {
-    "dev": "TAILWIND_MODE=watch NODE_ENV=development postcss ./app/static/src/css/tailwind.css -o ./app/static/dist/css/main.css -w",
-    "build:dev": "TAILWIND_MODE=build NODE_ENV=development postcss ./app/static/src/css/tailwind.css -o ./app/static/dist/css/main.css",
-    "build:prod": "TAILWIND_MODE=build NODE_ENV=production postcss ./app/static/src/css/tailwind.css -o ./app/static/dist/css/main.css"
+    "dev": "cross-env TAILWIND_MODE=watch NODE_ENV=development postcss ./app/static/src/css/tailwind.css -o ./app/static/dist/css/main.css -w",
+    "build:prod": "cross-env TAILWIND_MODE=build NODE_ENV=production postcss ./app/static/src/css/tailwind.css -o ./app/static/dist/css/main.css"
   },
   "repository": {
     "type": "git",
@@ -20,10 +19,11 @@
   "homepage": "https://github.com/blackbaba/Flask-Tailwind-Starter#readme",
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.18",
-    "postcss": "^8.3.0",
+    "autoprefixer": "^10.2.6",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.3.2",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.4"
   },
-  "dependencies": {
-    "autoprefixer": "^10.2.6"
-  }
+  "dependencies": {}
 }
