--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.6",
     "cross-env": "^7.0.3",
+    "cssnano": "^5.0.6",
     "postcss": "^8.3.2",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.4"
